# crowd.dev

./: .env.test  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.dist.composed  .env.dist.local  .prettierignore  package.json
docs/: self-hosting.md
frontend/: .gitignore  nginx.kube.conf  package-lock.json  package.json
scripts/: cli  crowd  dump-packages-db.sh  monitor-osspckgs.mjs  nango-integrations.sh  prepare-test-template-db.sh  restore-packages-db.sh  scaffold.insights.yaml  scaffold.test.yaml  scaffold.yaml  sequin-backfill.py  utils
services/apps/mailing_list_integration/: Makefile  README.md  pyproject.toml
services/apps/mailing_list_integration/dev/: seed.sql
services/apps/mailing_list_integration/src/: runner.sh
services/apps/mailing_list_integration/src/crowdmail/: enums.py  errors.py  server.py  settings.py
services/apps/mailing_list_integration/src/crowdmail/database/: connection.py  crud.py  registry.py
services/apps/mailing_list_integration/src/crowdmail/models/: list.py
services/apps/mailing_list_integration/src/crowdmail/services/mirror/: mirror_service.py
services/apps/mailing_list_integration/src/crowdmail/services/parse/: noteren.py
services/apps/mailing_list_integration/src/crowdmail/services/queue/: queue_service.py
services/apps/mailing_list_integration/src/crowdmail/worker/: list_worker.py
services/apps/mailing_list_integration/src/test/: test_noteren.py
(+1214 files in other folders)
